--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@vueuse/motion": "^2.0.0",
+    "animate.css": "^4.1.1",
     "gh-pages": "^6.1.1",
     "ipx": "^3.0.1",
     "nuxt": "^3.10.1",
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
-    "sharp": "^0.33.2",
-    "tailwind": "^4.0.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vuetify-nuxt-module": "^0.6.4"
@@ -26,7 +25,7 @@
   "devDependencies": {
     "@nuxt/image": "^1.3.0",
     "@nuxtjs/i18n": "^8.1.1",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.1"
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "prettier": "^3.0.3"
   }
 }
